# Astra

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml
astra/: Cargo.toml
astra-core/: Cargo.toml
astra-core/src/: atlas_system.rs  book_system.rs  cobalt_config_system.rs  file_system.rs  lib.rs  message_script.rs  message_system.rs  script_system.rs  terrain_system.rs
astra-derive/: Cargo.toml
astra-derive/src/: lib.rs
astra-types/: Cargo.toml
astra-types/src/: achieve.rs  ai.rs  amiibo.rs  anim_set.rs  animal.rs  arena.rs  asset_table.rs  calculator.rs  chapter.rs  chart.rs  cook.rs  dispos.rs  dragon_ride.rs  effect.rs  encount.rs  end_roll.rs  fishing.rs  friend_list.rs  god.rs  ground_attribute.rs  hub.rs  item.rs  job.rs  jukebox.rs  key_help.rs  kill_bonus.rs  later_talk.rs  lib.rs  map_editor.rs  map_history.rs  mascot.rs  movie.rs  muscle_exercise.rs  music.rs  param.rs  person.rs  photograph.rs  profile_card.rs  range.rs  relay.rs  (+9 more)
astra/assets/: libastra_cobalt_plugin.nro
astra/src/: app.rs  main.rs  message_db.rs  texture_cache.rs  util.rs
astra/src/editors/: accessory_editor.rs  achieve_editor.rs  ai_editor.rs  amiibo_editor.rs  anim_set_editor.rs  animal_editor.rs  arena_editor.rs  asset_table_editor.rs  calculator_editor.rs  chapter_editor.rs  chart_editor.rs  cobalt_config_editor.rs  cook_editor.rs  dragon_ride_editor.rs  effect_editor.rs  encount_editor.rs  end_roll_editor.rs  fishing_editor.rs  forge_editor.rs  friend_list_editor.rs  god_editor.rs  ground_attribute_editor.rs  hub_editor.rs  item_editor.rs  job_editor.rs  jukebox_editor.rs  key_help_editor.rs  kill_bonus_editor.rs  later_talk_editor.rs  map_editor_editor.rs  map_history_editor.rs  mascot_editor.rs  misc_editor.rs  mod.rs  movie_editor.rs  muscle_exercise_editor.rs  music_editor.rs  param_editor.rs  person_editor.rs  photograph_editor.rs  (+15 more)
astra/src/model/: cached_view.rs  config.rs  mod.rs  sheet.rs  shortcuts.rs  theme.rs
astra/src/states/: create_project.rs  first_run.rs  load_project.rs  main_state.rs  mod.rs  select_project.rs
astra/src/widgets/: about_modal.rs  add_modals.rs  bit_grid.rs  color_picker.rs  common.rs  config_editor.rs  defaults.rs  dispos_grid.rs  drop_down.rs  editable_list.rs  editor_content.rs  enum_combo_box.rs  group_editor_content.rs  id_field.rs  list_view.rs  mod.rs  msbt_editor.rs  msbt_field.rs  numeric.rs  project_setup.rs  property_grid.rs  stats.rs  terrain_grid.rs
