[package]
name = "astra"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
parking_lot = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
serde_yaml = { workspace = true }
egui = { workspace = true }
catppuccin-egui = { workspace = true }
maplit = { workspace = true }

astra-core = { path = "../astra-core" }
astra-types = { path = "../astra-types" }
astra_formats = { path = "../astra-formats" }

eframe = { version = "0.26.2", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
] }
directories = "4.0.1"
rfd = "0.10.0"
egui_extras = { version = "0.26.2", features = ["image"] }
egui_grid = { git = "https://github.com/thane98/egui-grid", rev = "b3d5c49" }
egui-modal = "0.3.4"
paste = "1.0.12"
egui-notify = "0.13.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing = { workspace = true }
tracing-subscriber = "0.3"
tracing-appender = "0.2.3"

